fixed one small bug with spacing

--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -4,9 +4,9 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
   h1 {
-    margin-bottom: 15px;
     text-align: center;
     margin: 50;
+    margin-bottom: 0px;
   }
   h2{
     font-size:large;
@@ -14,28 +14,28 @@
   }
   
   p{
-    border: 5px solid black;
-    background-color: #747474;
-    width: 100%;
-    height: 150px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 5;
-    padding-top: 32;
-    padding-left: 5;
-    font-family: Helvetica;
-    color: rgb(0, 0, 0);
-    overflow: hidden;
+    margin-top: 18px;
+    text-align: justify;
+    font-size:100%;
+  }
+  .card{
+    position: relative;
+    top: 0;
+    background-color:#666666;
+    margin: 20px;
+    padding: 20px;
+    border: 5px solid #000;
   }
 
   .cardtitle{
-    position: relative;
-    top: 48;
+    position: absolute;
+    top: -20;
+    right: -5;
     padding-right: 50;
     padding-left: 50;
-    float: right;
     border: 5px solid black;
     text-align: center;
+    box-sizing: border-box;
   }
 
   .chicken{
